[metadata]
name = bfio-napari
version = file: VERSION
author = Nick Schaub
author_email = nick.schaub@nih.gov
url = https://github.com/polusai/data-tools/bfio-napari
description = Napari plugin for bfio reader and writer
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
platform = any
keywords = napari OME tiff zarr
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: napari
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules
project_urls = 
    Bug Tracker = https://github.com/polusai/data-tools/issues

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.7.*
packages = bfio_napari
# test_suite = tests
setup_requires =
    setuptools
install_requires =
    napari>=0.4.15
    bfio>=2.3.0
tests_require =

[options.entry_points]
napari.manifest =
    napari-hello = bfio_napari:napari.yaml

[bdist_wheel]
universal = true
    
[flake8]
docstring-convention=google
max-line-length=88
exclude=noxfile.py,docs/*,tests/*,examples/*,.nox/*,build/*,bfio/OmeXml.py,setup.py
ignore=D105, W503, D100, D104, AZ100
extend-ignore = E203

[mypy]
disallow_any_decorated = true
disallow_any_generics = true
disallow_any_unimported = false
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true

[bumpversion]
current_version = 2.3.0
commit = True
tag = True
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[a-z]+)(?P<build>\d+))?
serialize = 
	{major}.{minor}.{patch}-{release}{build}
	{major}.{minor}.{patch}

[bumpversion:part:release]
optional_value = _
first_value = dev
values = 
	dev
	_

[bumpversion:part:build]

[bumpversion:file:VERSION]

[bumpversion:file:requirements/requirements-base.txt]
search = bfio[all]=={current_version}
replace = bfio[all]=={new_version}

[bumpversion:file:README.md]
search = {current_version}
replace = {new_version}
